--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2848,7 +2848,11 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_decision_cost_15armyxp_blocked:0 "£army_experience §R15§!"
  TUR_armenian_millet:0 "Armenian Millet"
  TUR_armenian_millet_desc:0 "Armenians, with their own sect of Christianity, has been consisted of one of the oldest Ottoman millets. They mostly residing in Caucasus, Eastern Anatolia, Cilicia and some parts of Marmara coast. Yet their recent position in our reforms have led them to be unsatisfied with our rule, ready to seek liberation."
- ottoman_armenian_header_tt:0 "Armenian Population"
+ ottoman_armenian_header_tt:0 "Armenian [TUR_millet_population_state]"
+ TUR_armenian_minority_name:0 "Armenian [TUR_millet_population_state]"
+ TUR_millet_mode_target_tt:0 "Current Target: [TUR_millet_population_state]"
+ TUR_millet_population:0 "Population"
+ TUR_millet_state:0 "State"
  TUR_armenian_population_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_ottoman_armenian_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_ottoman_armenian_stability_factor|=2%+]"
  TUR_minority_decision:0 "Management of Minorities"
  TUR_minority_decision_desc:0 "Our empire stretches from Balkans to Basra, Caucasus to Cyrenaica. Yet since we're not the initial habiters of these lands, many people who lived here when we first came still resides within our boundries. Centralization and reform policies started during Tanzimat has resulted in many minorities in our empire displeasant with our rule."
@@ -2856,7 +2860,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ALB_minority_decision_desc:0 "While our autonomous vilayet is mostly consistet of Albanians, there are certain minorities within it. From Greeks of [758.GetName] to Serbs of [760.GetName], even the Turks in [203.GetName]; even the lands perceived as "Albanian" inhabit various minorities."
  TRS_minority_decision:0 "Management of Minorities"
  
- TUR_armenian_minority_name:0 "Armenian Population"
  TUR_arab_minority_name:0 "£ww1_flag_ARB  Arab Minority"
  TUR_greek_minority_name:0 "£ww1_game_rule_flag_GRE  Greek Minority"
  TUR_jewish_minority_name:0 "£ww1_flag_ISR  Jewish Minority"
@@ -3244,7 +3247,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_stability_normal:0 "£stability_texticon  Stability: §G+0.20%§!\n"
  TUR_minority_stability_1:0 "£stability_texticon  Stability: §G+0.10%§!\n"
  TUR_minority_war_support_down:0 "[TUR_minority_war_support_down]"
- TUR_minority_war_support_normal:0 "£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
+ TUR_minority_war_support_normal:0 "£war_support_texticon  War Support: §G+0.20%§!\n"
+ TUR_minority_war_support_1:0 "£war_support_texticon  War Support: §G+0.10%§!\n"
  TUR_minority_stability_up_1:0 "Modify State's Modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n"
 
  TUR_sway_the_army:0 "Sway the Army"
