Raj, Akali Movement Events and Ideas

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9521,7 +9521,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_flavor_raj.26.a:0 "Truly tragic."
 
  # 1919
-
  ww1_flavor_raj.27.t:0 "Kisan Sabha"
  ww1_flavor_raj.27.d:0 "In a momentous gathering, Indian farmers have united to form the Kisan Sabha, an organization dedicated to championing their rights and addressing grievances. The Sabha, established on April 6th, 1919, in Lucknow, aims to tackle oppressive landlord practices, exorbitant rents, and unfair taxes. Prominent leaders like Swami Sahajanand Saraswati have taken the helm, organizing mass meetings and protests. Other notable members include Gauri Shankar Mishra, Indra Narayan Dwivedi and Madan Mohan Malviya."
  ww1_flavor_raj.27.a:0 "Another peasant movement, huh."
@@ -9529,6 +9528,21 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_flavor_raj.28.t:0 "Murder of Clement De La Haye"
  ww1_flavor_raj.28.d:0 "During the night, Clement De La Haye, the headmaster of Newington House, a college in Madras, was shot dead in his bed. Although the heir to the Singampatti estate was initially accused, he was quickly acquitted, leaving the identity of the murderer unknown.\n\nVarious motives have been put forward for the murder. According to eyewitnesses, the boys at the house were often offended by De La Haye's racist remarks, as he often referred to them as ''barbaric Tamilians''. There were also rumours that some of the boys at the college had been seduced by De La Haye's wife."
  ww1_flavor_raj.28.a:0 "His wife certainly is cute, but that's no reason to murder him!"
+
+ ww1_flavor_raj.29.t:0 "Central Sikh League Founded"
+ ww1_flavor_raj.29.d:0 "In March this year, at a general meeting in Lahore, Sikh leaders of the Singh Sabha formed the Central Sikh League, which was formally launched this December. In its periodical, the 'Akali', it listed among its aims the restoration of control of the Khalsa College in Amritsar to representatives of the Sikh community, the liberation of gurdwaras (Sikh places of worship) from mahant control and the encouragement of Sikhs to participate in the general independence movement."
+ ww1_flavor_raj.29.a:0 "It's not our fault that your institutions are corrupt!"
+
+ # 1920
+ ww1_flavor_raj.30.t:0 "Central Sikh League Seize the Golden Temple"
+ ww1_flavor_raj.30.d:0 "In a decisive move, the Akali Movement has successfully taken control of the Golden Temple and the Akal Takht, marking a historic shift in the administration of Sikh religious affairs. The Central Sikh League, responding to the growing discontent among Sikhs, demanded that the management of the sacred shrine be transferred from government hands to an elected representative body accountable to the Sikh panth.\n\nThis bold action comes in the wake of the tragic Jallianwala Bagh massacre, which left an indelible mark on the Sikh community and fueled their determination for autonomy. The massacre, coupled with the controversial support of General Dyer by Arur Singh, the then head priest of the Golden Temple, ignited widespread outrage within Singh Sabha circles. This unrest, along with the broader disturbances across Punjab in 1919, amplified the call for Sikhs to reclaim control of their gurdwaras from corrupt and unrepresentative mahants."
+ ww1_flavor_raj.30.a:0 "Perhaps we should take their demands into consideration."
+ seize_golden_temple_reward:0 "The colonial Government of Punjab will appoint a provisional committee of §Y36 Members§!, made up entirely from §RSikh Landed Aristocrat Families§!, to formulate proposals regarding the operation of the §YGolden Temple§!."
+
+ ww1_flavor_raj.31.t:0 "Shiromani Gurdwara Prabandhak Committee Founded"
+ ww1_flavor_raj.31.d:0 "Last month the colonial government of Punjab appointed a 36 Members Committee to formulate proposals regarding the operation of the Golden Temple, however, the Central Sikh League have disapproved the committee's composition. This as lead the league to organise a large gathering at the Golden Temple today, which saw 10,000 Sikhs attend. We must act now or face further backlash!"
+ ww1_flavor_raj.31.a:0 "Let them organise the Committee all they want, I don't care."
+ SGPC_reward:0 "The committee in charge of the §YGolden Temple§! will be reformulated with §Y175 Members§! to form a Managing Committee for all the Gurdwaras.\n\n§RTo fully solve the Akali issue we will need to pass the Sikh Gurdwara Bill by either completing the ''Careful Conciliation'' focus or he Protect ''Religious Minorities'' focus.§!"
 
  # 1922
  ww1_flavor_raj.21.t:0 "Bijolia Agreement"
@@ -9632,14 +9646,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.28.t:0 "Garret O'Moore Creagh Steps Down."
  ww1_raj.28.d:0 "PLACEHOLDER"
  ww1_raj.28.a:0 "It's time to close this dark chapter in the Raj's history."
-
- ww1_raj.30.t:0 "Bijolia movement"
- ww1_raj.30.d:0 "PLACEHOLDER"
- ww1_raj.30.a:0 "Another peasant movement, huh."
-
- ww1_raj.34.t:0 "Akali Movement"
- ww1_raj.34.d:0 "PLACEHOLDER"
- ww1_raj.34.a:0 "How could you reform the words of god?"
 
  ww1_raj.35.t:0 "All India Khilafat Conference"
  ww1_raj.35.d:0 "PLACEHOLDER"
