--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2865,6 +2865,9 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  RAJ_non_cooperation_movement:0 "Non-Cooperation Movement"
  RAJ_non_cooperation_movement_desc:0 ""
 
+ RAJ_akali_movement1:0 "Akali Movement"
+ RAJ_akali_movement2:0 "Akali Movement"
+
  RAJ_indian_home_rule_movement:0 "Indian Home Rule Movement"
  RAJ_indian_home_rule_movement_desc:0 ""
 
