Raj, AITUC event

--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -416,6 +416,7 @@
  beiyang_tiger:0 "Beiyang Tiger"
  beiyang_dog:0 "Beiyang Dog"
 
+ RAJ_the_lion_of_punjab:0 "The Lion of Punjab"
  RAJ_director_general_of_posts_and_telegraphs:0 "Director General of Posts and Telegraphs"
  RAJ_director_of_industries_and_controller_of_munitions:0 "Director of Industries and Controller of Munitions"
  RAJ_indian_medical_service_officer:0 "Indian Medical Service Officer"
