--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1052,10 +1052,18 @@
  RAJ_neutrality_party_long:0 "Indian Governorship"
  RAJ_communism_party:0 "Indian Section of the International"
  RAJ_communism_party_long:0 "Indian Section of the International"
+ RAJ_aituc:0 "AITUC"
+ RAJ_aituc_long:0 "All India Trade Union Congress"
+ RAJ_communist_party_of_india:0 "CPI"
+ RAJ_communist_party_of_india_long:0 "Communist Party of India"
  RAJ_democratic_party:0 "INC"
  RAJ_democratic_party_long:0 "Indian National Congress (Moderates)"
  RAJ_fascism_party:0 "INC"
  RAJ_fascism_party_long:0 "Indian National Congress (Radicals)"
+ RAJ_swaraj_party:0 "SP"
+ RAJ_swaraj_party_long:0 "Swaraj Party"
+
+ # (old content, to be deleted at some point)
  RAJ_lost_great_war:0 "Townshend Clique"
  RAJ_lost_great_war_long:0 "British Government Remnants"
  RAJ_princes:0 "Princes' Influence"
