Raj, War and Gandhi Related Events

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9405,6 +9405,26 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_war_raj.2.d:0 "In a momentous development for Hindu political and cultural unity, the Sarvadeshak Hindu Sabha (All-India Hindu Grand Assembly), was officially established at the Kumbh Mela in Haridwar this month. This umbrella organization is the culmination of a concerted effort by Hindu leaders to consolidate regional Hindu Sabhas into a singular, powerful entity. The initiative, sparked by the controversial partition of Bengal in 1905 and the subsequent formation of the All India Muslim League, sought to safeguard Hindu interests amisdt increasing communal tensions. Preparatory sessions were held earlier this year in Haridwar, Lucknow, and Delhi, leading to the grand assembly's formation. Prominent figures such as Mahatma Gandhi and Swami Shraddhanand lent their support, emphasizing Hindu solidarity and the need for social reforms."
  ww1_war_raj.2.a:0 "Let's keep an eye on them."
  
+ ww1_war_raj.3.t:0 "Champaran Satyagraha"
+ ww1_war_raj.3.d:0 "The ''Tinkathia system'' is a system whereby tenant farmers are forced to grow indigo, which is used to make dye, on part of their land as a condition of their tenancy. While the German invention of a cheaper, artificial dye reduced the demand for indigo, the start of the war reignited it and made indigo profitable again. So many tenants were once again forced to grow it on part of their land - as required by their lease - which naturally caused much anger and resentment.\n\nWhen Gandhi returned from South Africa less than two years ago and saw the peasants in northern India being oppressed by the indigo planters, he tried to use the same methods he had used in South Africa to organise mass uprisings of people protesting against injustice. This led to the recent launch of the 'Satyagraha' campaign in the Champaran district of Bihar, with farmers demanding, among other things, the abolition of the Tinkathia system."
+ ww1_war_raj.3.a:0 "Abolish the Tinkathia system."
+ ww1_war_raj.3.b:0 "You should have read the fine print, my friend."
+ RAJ_historical_choice:0 "\n§RThis is the Historical Choice.§!"
+
+ ww1_war_raj.4.t:0 "Kheda Satyagraha"
+ ww1_war_raj.4.d:0 "Earlier this year, the colonial government of Bombay increased taxes in Kheda by 23%, while it was hit by Chappania famine and others leading to cholera and plague. Receiving support from the Indian National Congress, notably Sardar Vallabhbhai Patel, Mohandas Karamchand Gandhi launched the Kheda Satyagraha, which organised the peasants of all the different ethnic and caste communities of Kheda to sign a petition calling for the tax for this year to be scrapped in wake of the famine. The government in Bombay rejected the charter, warning that if the peasants did not pay, the lands and property would be confiscated and many arrested, but the Satyagraha continued.\n\nAs was promised, the government's collectors and inspectors sent in thugs to seize property and cattle, while the police confiscated the lands and all agrarian property. The farmers did not resist arrest, nor retaliate, instead, they used their cash and valuables to donate to the Gujarat Sabha which was officially organising the protest. Gujaratis sympathetic to the revolt in other parts of India helped to shelter the relatives and property of the protesting peasants as well."
+ ww1_war_raj.4.a:0 "Suspend the tax for now and return their properties."
+ ww1_war_raj.4.b:0 "Gimme money!"
+
+ ww1_war_raj.5.t:0 "Rowlatt Hartal"
+ ww1_war_raj.5.d:0 "In recent days, the Indian subcontinent has witnessed a significant surge in unrest, prompted by the promulgation of the Rowlatt Act, a piece of legislation deemed necessary by the Government of India to combat revolutionary activities threatening the stability of the Empire. This Act, however, has incited widespread discontent among the Indian populace, leading to what has now been termed the Rowlatt Hartal.\n\nCities across India, notably Lahore, Amritsar, and Bombay, erupted in demonstrations and public gatherings as various groups and political leaders called for a day of mourning and protest against the aforementioned legislation. The Hartal, marked by strikes and the closure of businesses, signified a robust repudiation of what many Indians perceive as repressive measures infringing upon their civil liberties."
+ ww1_war_raj.5.a:0 "It's for your own safety!"
+
+ ww1_war_raj.6.t:0 "Buckingham and Carnatic Mills Strike"
+ ww1_war_raj.6.d:0 "Madras finds itself at the center of industrial turmoil as the workers of the Buckingham and Carnatic Mills have initiated a widespread strike, commencing on March 1, 1921. This labour unrest arises from a series of grievances regarding wage reductions and working conditions, drawing attention to the pressing issues faced by the workforce in our burgeoning textile industry.\n\nReports indicate that the strike was precipitated by the management’s recent decision to reduce wages, which many workers assert is unjustifiable given the rising cost of living in the region. In a bold demonstration of solidarity, thousands of labourers have ceased work, calling for the restoration of fair wages and improved conditions. The atmosphere is charged as workers gather in large numbers, raising banners and voicing their demands for justice."
+ ww1_war_raj.6.a:0 "We must protect the Workers."
+ ww1_war_raj.6.b:0 "We must protect the Mils Owners."
+ 
  # Flavor #
  
  # 1910
@@ -9621,16 +9641,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.17.d:0 "As the struggle for greater autonomy continues, both the Congress and the Muslim League have realised that further concessions will require greater cooperation. With Bal Gangadhar Tilak representing the Congress, they have now formally agreed to allow religious minorities representation in the provincial legislatures. With this new alliance came new demands on the British administration:\n\n1.The number of elected seats on the councils should be increased.\n2.Laws/Motions which were passed by large majorities in the councils should be accepted as bindings by the British Government.\n3.Minorities in the provinces should be protected.\n4.All provinces should be granted autonomy.\n5.Separating the executive from the judiciary.\n6.At least half of the members of the Executive Council being elected, the Legislative council having a majority of elected members."
  ww1_raj.17.a:0 "They're more united against our rule than ever now."
 
- ww1_raj.18.t:0 "Champaran Satyagraha"
- ww1_raj.18.d:0 "PLACEHOLDER"
- ww1_raj.18.a:0 "Abolish the Tinkathia System"
- ww1_raj.18.b:0 "Supress theses dangerous terrorists."
-
- ww1_raj.19.t:0 "Kheda Satyagraha"
- ww1_raj.19.d:0 "PLACEHOLDER"
- ww1_raj.19.a:0 "Suspend the tax for now."
- ww1_raj.19.b:0 "Supress theses dangerous terrorists."
-
  ww1_raj.20.t:0 "Jallianwala Bagh Massacre"
  ww1_raj.20.d:0 "PLACEHOLDER"
  ww1_raj.20.a:0 "Was this necessary ? God only knows."
@@ -9660,11 +9670,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.35.t:0 "All India Khilafat Conference"
  ww1_raj.35.d:0 "PLACEHOLDER"
  ww1_raj.35.a:0 "When it's not the Hindus it's the Muslim ! Jeanne ! Au s'cours!"
-
- ww1_raj.36.t:0 "Buckingham and Carnatic Mills Strike"
- ww1_raj.36.d:0 "PLACEHOLDER"
- ww1_raj.36.a:0 "Adress their strifes."
- ww1_raj.36.b:0 "Supress the Workers."
 
  ww1_raj.37.t:0 "Malabar Rebellion"
  ww1_raj.37.d:0 "PLACEHOLDER"
