--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5176,6 +5176,7 @@ ROM_bombing_raids:0 "Bombing Raids"
 ROM_bombing_raids_desc:0 ""
 ROM_french_air_mission:0 "French Air Mission"
 ROM_french_air_mission_desc:0 ""
+ROM_the_moderating_influence:0 "The Moderating Influence"
  #custom tooltips
 ROM_the_kings_government:0 "The King's Government"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
