--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -788,7 +788,7 @@
  STATE_787: "Aleksandropol"
  STATE_788: "Yukarı Cuma"
  STATE_789: "Walvis Bay"
- STATE_790: "Cezayir-i Bahr-i Sefid"
+ STATE_790: "Archipelago"
  STATE_791: "Ha'il"
  STATE_792: "Jubaland"
  STATE_793: "Eupen"
@@ -879,7 +879,7 @@
  STATE_878: "Medina"
  STATE_879: "Erbil"
  STATE_880: "Geledi"
- STATE_881: "Dersim"
+ STATE_881: "Mamuret-ul-Aziz"
  STATE_882: "Oman"
  STATE_883: "Suleymaniyah"
  STATE_884: "Al Hasakah"
