--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2864,12 +2864,90 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_armenian_population_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_armenian_population_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_armenian_population_war_support_factor|=2%+]"
  TUR_armenian_state_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_armenian_state_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_armenian_state_war_support_factor|=2%+]"
  TUR_armenian_millet_text_desc_tt:0 "[TUR_armenian_millet_text_desc_tt]"
- TUR_armenian_population_text_desc_tt:0 "§YEffects from Individual States:§![TUR_armenian_population_341]"
+ TUR_armenian_population_text_desc_tt:0 "§YEffects from Individual States:§![TUR_armenian_population_230][TUR_armenian_population_233][TUR_armenian_population_341][TUR_armenian_population_344][TUR_armenian_population_347][TUR_armenian_population_348][TUR_armenian_population_349][TUR_armenian_population_350][TUR_armenian_population_352][TUR_armenian_population_353][TUR_armenian_population_787][TUR_armenian_population_806][TUR_armenian_population_816][TUR_armenian_population_818][TUR_armenian_population_825][TUR_armenian_population_857][TUR_armenian_population_881][TUR_armenian_population_938][TUR_armenian_population_939][TUR_armenian_population_1019]"
  TUR_armenian_state_text_desc_tt:0 "§YEffects from Individual States:§![TUR_armenian_population_341]"
- TUR_armenian_population_341_yes:0 "\n[341.GetName]: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_341_stability_factor][TUR_armenian_population_341_war_support_factor][TUR_armenian_population_341_political_power_factor]"
+ TUR_armenian_population_230_yes:0 "\n§Y[230.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_230_stability_factor][TUR_armenian_population_230_war_support_factor][TUR_armenian_population_230_political_power_factor]"
+ TUR_armenian_population_230_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_230_population_stability_factor|=2%+]"
+ TUR_armenian_population_230_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_230_population_war_support_factor|=2%+]"
+ TUR_armenian_population_230_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_230_population_war_support_factor|=0%+]"
+ TUR_armenian_population_233_yes:0 "\n§Y[233.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_233_stability_factor][TUR_armenian_population_233_war_support_factor][TUR_armenian_population_233_political_power_factor]"
+ TUR_armenian_population_233_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_233_population_stability_factor|=2%+]"
+ TUR_armenian_population_233_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_233_population_war_support_factor|=2%+]"
+ TUR_armenian_population_233_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_233_population_war_support_factor|=0%+]"
+ TUR_armenian_population_341_yes:0 "\n§Y[341.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_341_stability_factor][TUR_armenian_population_341_war_support_factor][TUR_armenian_population_341_political_power_factor]"
  TUR_armenian_population_341_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_341_population_stability_factor|=2%+]"
  TUR_armenian_population_341_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_341_population_war_support_factor|=2%+]"
  TUR_armenian_population_341_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_341_population_war_support_factor|=0%+]"
+ TUR_armenian_population_344_yes:0 "\n§Y[344.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_344_stability_factor][TUR_armenian_population_344_war_support_factor][TUR_armenian_population_344_political_power_factor]"
+ TUR_armenian_population_344_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_344_population_stability_factor|=2%+]"
+ TUR_armenian_population_344_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_344_population_war_support_factor|=2%+]"
+ TUR_armenian_population_344_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_344_population_war_support_factor|=0%+]"
+ TUR_armenian_population_347_yes:0 "\n§Y[347.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_347_stability_factor][TUR_armenian_population_347_war_support_factor][TUR_armenian_population_347_political_power_factor]"
+ TUR_armenian_population_347_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_347_population_stability_factor|=2%+]"
+ TUR_armenian_population_347_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_347_population_war_support_factor|=2%+]"
+ TUR_armenian_population_347_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_347_population_war_support_factor|=0%+]"
+ TUR_armenian_population_348_yes:0 "\n§Y[348.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_348_stability_factor][TUR_armenian_population_348_war_support_factor][TUR_armenian_population_348_political_power_factor]"
+ TUR_armenian_population_348_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_348_population_stability_factor|=2%+]"
+ TUR_armenian_population_348_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_348_population_war_support_factor|=2%+]"
+ TUR_armenian_population_348_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_348_population_war_support_factor|=0%+]"
+ TUR_armenian_population_349_yes:0 "\n§Y[349.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_349_stability_factor][TUR_armenian_population_349_war_support_factor][TUR_armenian_population_349_political_power_factor]"
+ TUR_armenian_population_349_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_349_population_stability_factor|=2%+]"
+ TUR_armenian_population_349_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_349_population_war_support_factor|=2%+]"
+ TUR_armenian_population_349_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_349_population_war_support_factor|=0%+]"
+ TUR_armenian_population_350_yes:0 "\n§Y[350.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_350_stability_factor][TUR_armenian_population_350_war_support_factor][TUR_armenian_population_350_political_power_factor]"
+ TUR_armenian_population_350_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_350_population_stability_factor|=2%+]"
+ TUR_armenian_population_350_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_350_population_war_support_factor|=2%+]"
+ TUR_armenian_population_350_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_350_population_war_support_factor|=0%+]"
+ TUR_armenian_population_352_yes:0 "\n§Y[352.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_352_stability_factor][TUR_armenian_population_352_war_support_factor][TUR_armenian_population_352_political_power_factor]"
+ TUR_armenian_population_352_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_352_population_stability_factor|=2%+]"
+ TUR_armenian_population_352_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_352_population_war_support_factor|=2%+]"
+ TUR_armenian_population_352_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_352_population_war_support_factor|=0%+]"
+ TUR_armenian_population_353_yes:0 "\n§Y[353.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_353_stability_factor][TUR_armenian_population_353_war_support_factor][TUR_armenian_population_353_political_power_factor]"
+ TUR_armenian_population_353_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_353_population_stability_factor|=2%+]"
+ TUR_armenian_population_353_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_353_population_war_support_factor|=2%+]"
+ TUR_armenian_population_353_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_353_population_war_support_factor|=0%+]"
+ TUR_armenian_population_787_yes:0 "\n§Y[787.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_787_stability_factor][TUR_armenian_population_787_war_support_factor][TUR_armenian_population_787_political_power_factor]"
+ TUR_armenian_population_787_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_787_population_stability_factor|=2%+]"
+ TUR_armenian_population_787_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_787_population_war_support_factor|=2%+]"
+ TUR_armenian_population_787_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_787_population_war_support_factor|=0%+]"
+ TUR_armenian_population_806_yes:0 "\n§Y[806.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_806_stability_factor][TUR_armenian_population_806_war_support_factor][TUR_armenian_population_806_political_power_factor]"
+ TUR_armenian_population_806_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_806_population_stability_factor|=2%+]"
+ TUR_armenian_population_806_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_806_population_war_support_factor|=2%+]"
+ TUR_armenian_population_806_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_806_population_war_support_factor|=0%+]"
+ TUR_armenian_population_816_yes:0 "\n§Y[816.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_816_stability_factor][TUR_armenian_population_816_war_support_factor][TUR_armenian_population_816_political_power_factor]"
+ TUR_armenian_population_816_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_816_population_stability_factor|=2%+]"
+ TUR_armenian_population_816_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_816_population_war_support_factor|=2%+]"
+ TUR_armenian_population_816_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_816_population_war_support_factor|=0%+]"
+ TUR_armenian_population_818_yes:0 "\n§Y[818.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_818_stability_factor][TUR_armenian_population_818_war_support_factor][TUR_armenian_population_818_political_power_factor]"
+ TUR_armenian_population_818_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_818_population_stability_factor|=2%+]"
+ TUR_armenian_population_818_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_818_population_war_support_factor|=2%+]"
+ TUR_armenian_population_818_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_818_population_war_support_factor|=0%+]"
+ TUR_armenian_population_825_yes:0 "\n§Y[825.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_825_stability_factor][TUR_armenian_population_825_war_support_factor][TUR_armenian_population_825_political_power_factor]"
+ TUR_armenian_population_825_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_825_population_stability_factor|=2%+]"
+ TUR_armenian_population_825_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_825_population_war_support_factor|=2%+]"
+ TUR_armenian_population_825_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_825_population_war_support_factor|=0%+]"
+ TUR_armenian_population_857_yes:0 "\n§Y[857.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_857_stability_factor][TUR_armenian_population_857_war_support_factor][TUR_armenian_population_857_political_power_factor]"
+ TUR_armenian_population_857_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_857_population_stability_factor|=2%+]"
+ TUR_armenian_population_857_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_857_population_war_support_factor|=2%+]"
+ TUR_armenian_population_857_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_857_population_war_support_factor|=0%+]"
+ TUR_armenian_population_881_yes:0 "\n§Y[881.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_881_stability_factor][TUR_armenian_population_881_war_support_factor][TUR_armenian_population_881_political_power_factor]"
+ TUR_armenian_population_881_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_881_population_stability_factor|=2%+]"
+ TUR_armenian_population_881_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_881_population_war_support_factor|=2%+]"
+ TUR_armenian_population_881_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_881_population_war_support_factor|=0%+]"
+ TUR_armenian_population_938_yes:0 "\n§Y[938.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_938_stability_factor][TUR_armenian_population_938_war_support_factor][TUR_armenian_population_938_political_power_factor]"
+ TUR_armenian_population_938_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_938_population_stability_factor|=2%+]"
+ TUR_armenian_population_938_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_938_population_war_support_factor|=2%+]"
+ TUR_armenian_population_938_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_938_population_war_support_factor|=0%+]"
+ TUR_armenian_population_939_yes:0 "\n§Y[939.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_939_stability_factor][TUR_armenian_population_939_war_support_factor][TUR_armenian_population_939_political_power_factor]"
+ TUR_armenian_population_939_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_939_population_stability_factor|=2%+]"
+ TUR_armenian_population_939_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_939_population_war_support_factor|=2%+]"
+ TUR_armenian_population_939_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_939_population_war_support_factor|=0%+]"
+ TUR_armenian_population_1019_yes:0 "\n§Y[1019.GetName]§!: Modifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_armenian_population_1019_stability_factor][TUR_armenian_population_1019_war_support_factor][TUR_armenian_population_1019_political_power_factor]"
+ TUR_armenian_population_1019_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1019_population_stability_factor|=2%+]"
+ TUR_armenian_population_1019_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1019_population_war_support_factor|=2%+]"
+ TUR_armenian_population_1019_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1019_population_war_support_factor|=0%+]"
+
+
 
  TUR_arab_minority_name:0 "£ww1_flag_ARB  Arab Minority"
  TUR_greek_minority_name:0 "£ww1_game_rule_flag_GRE  Greek Minority"
