Hungary, Janos Hadik

--- a/localisation/english/ww1_hungary_l_english.yml
+++ b/localisation/english/ww1_hungary_l_english.yml
@@ -14,6 +14,7 @@
  HUN_kolossvary_de_kolosvar:0 "Kolossváry de Kolosvár"
  HUN_tamasy_von_fogaras:0 "Tamásy von Fogaras"
  HUN_joseph_august:0 "József Ágost"
+ HUN_janos_hadik:0 "János Hadik"
  HUN_karoly_huszar:0 "Károly Huszár"
  HUN_istvan_tisza:0 "István Tisza"
  HUN_stromfel_aurel:0 "Stromfeld Aurél"
@@ -53,6 +54,7 @@
  ### TRAITS ###
  ##############
  president_of_the_soldier_soviet:0 "President of the Soldier's Council"
+ prime_minister_of_the_nng:0 "Prime Minister"
  
  ##################
  ### FOCUS TREE ###
