Hungary, Temp Ban on Political Parties

--- a/localisation/english/ww1_hungary_l_english.yml
+++ b/localisation/english/ww1_hungary_l_english.yml
@@ -131,6 +131,9 @@
  HUN_neglected_army1:0 "Neglected Army"
  HUN_neglected_army2:0 "Neglected Army"
 
+ # Homo Regius Path Spirits
+ HUN_temporary_ban_on_political_parties_idea:0 "Temporary Ban on Political Parties"
+
  #################
  ### DECISIONS ###
  #################
