added greek state

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -754,7 +754,7 @@
  STATE_753: "Papua"
  STATE_754: "Kufra"
  STATE_755: "Hohsi Corridor" #河西走廊
- STATE_756: "Eastern Thrace"
+ STATE_756: "Edirne"
  STATE_757: "Gümülcine"
  STATE_758: "Yanya"
  STATE_759: "Radovişte"
