democratic coalition focus

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5177,6 +5177,7 @@ ROM_bombing_raids_desc:0 ""
 ROM_french_air_mission:0 "French Air Mission"
 ROM_french_air_mission_desc:0 ""
 ROM_the_moderating_influence:0 "The Moderating Influence"
+ROM_democratic_coalition:0 "Democratic Coalition"
  #custom tooltips
 ROM_the_kings_government:0 "The King's Government"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
@@ -5196,6 +5197,8 @@ ROM_british_support_withdraw.tt:0 "If we go to war with §YBritain§! the effect
 ROM_austrian_support_withdraw.tt:0 "If we go to war with §YAustria§! the effects from this §Yfocus§! will be §RRemoved§!."
 ROM_rural_base.tt:0 "If §YDmitrie Sturdza§! is hired as an advisor, this focus would have the following effects:\nChange in popularity of Democracy: §G+15.00%§!\nPolitical Power: §G+50§!.\nGain Base Stability: §G+5.00%§!.\n\n"
 ROM_rural_base.tt2:0 "\nOur advisor §YDmitrie Sturdza§! is §GImproving§! the effects of this focus."
+democratic_coalition:0 "Democratic coalition"
+
 
 
  TUR_promote_turkish_culture_in_aegean:0 "Promote Turkish Culture in Aegean"
