--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -605,6 +605,7 @@
  VICTORY_POINTS_3951:0 "Eskişehir"
  VICTORY_POINTS_11826:0 "Yozgat"
  VICTORY_POINTS_1056:0 "Homs"
+ VICTORY_POINTS_3656:0 "Akhaltsikhe"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
