progress so far

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4743,6 +4743,7 @@
  TUR_our_traditional_allies:0 "Our Traditional Allies"
  TUR_our_traditional_allies_desc:0 "Our empire has a long tradition of alligning with the French and Britain in foreign conflicts. As our empire already has deep sympathies to the French culture, they are the most natural option for an alliance."
  TUR_our_traditional_allies_tt:0 "§RFor these actions to take place, [TUR.GetName] has to agree.§!"
+ TUR_france_refused_us_into_faction_tt:0 "§Y[FRA.GetName]§! has refused our entry into §Y[FRA.GetFactionName]§!"
  TUR_aegean_dispute:0 "Aegean Dispute"
  TUR_aegean_dispute_desc:0 "We've been sharing the Aegean with the Greek nation for some time. Their ownership over the Aegean Islands have been causing security threat against our empire. Now that the protectors of the modern Greek state is alligned with us, we're free to demand the transfer of the islands."
  TUR_aegean_dispute_tt:0 "We'll demand §Y[GRE.GetName]§! to give up the §YAegean Islands§! near our coasts.\n§RThis might result in war.§!"
@@ -4770,6 +4771,7 @@
  TUR_entente_bailouts_tt:0 "Every country we §Yshare a faction with§! whom §Ywe owe debt to§! will be asked to §Ybail us out§!."
  TUR_german_ottoman_alliance:0 "German-Ottoman Alliance"
  TUR_german_ottoman_alliance_desc:0 "Russians always had an interest in our straits while the British and the French are biding their time to carve up our empire. Germany is the only European power that we can trust to ensure the existence of our empire."
+ TUR_german_refused_us_into_faction_tt:0 "§Y[GER.GetName]§! has refused our entry into §Y[GER.GetFactionName]§!"
  TUR_arrival_of_yildirim_army_group:0 "Arrival of the Yıldırım Army Group"
  TUR_arrival_of_yildirim_army_group_desc:0 "Yıldırım Army Group is one of the best well equipped army groups in the empire. Equipped with the most up to date European arms, we must deploy them into the frontline."
  TUR_arrival_of_yildirim_army_group_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\n£attacker_speed_texticon  Divisions speed: §G+5.00%§!\n£breakthrough_texticon  Breakthrough: §G+5.00%§!\n\nCreates a division template named §YYıldırım Birlikleri§!."
