--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3088,6 +3088,12 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_armenian_state_1019_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1019_state_war_support_factor|=0%+]"
  TUR_greek_millet_text_tt:0 "[TUR_greek_millet_text_tt]"
  TUR_greek_millet_modifiers_tt:0 "§YGreek Millet Modifiers§!\nIncompatible Religion: §R-0.50%§!\nIncompatible Culture: §R-0.50%§!\n\n"
+
+ TUR_greek_state_specific_modifiers_tt:0 "§YGreek State Modifiers§!\n\n[TUR_greek_state_specific_modifiers]"
+ TUR_greek_state_specific_modifiers_yes:0 "§YState Specific Modifiers§![TUR_greek_state_974_modifier][TUR_greek_state_975_modifier]"
+ TUR_greek_state_974_modifier_yes: "\n§Y[974.GetName]§!: [TUR_greek_state_974_modifier_autonomy]"
+ TUR_greek_state_975_modifier_yes: "\n§Y[975.GetName]§!: [TUR_greek_state_975_modifier_autonomy]"
+ 
  TUR_greek_population_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_greek_population_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_greek_population_war_support_factor|=2%+]"
  TUR_greek_state_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_greek_state_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_greek_state_war_support_factor|=2%+]"
  TUR_greek_millet_text_desc_tt:0 "[TUR_greek_millet_text_desc_tt]"
@@ -3384,8 +3390,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_arab_state_specific_modifiers_tt:0 "§YArab State Modifiers§!\n\n[TUR_arab_state_specific_modifiers]"
  TUR_arab_state_specific_modifiers_yes:0 "§YState Specific Modifiers§![TUR_arab_state_553_modifier][TUR_arab_state_679_modifier][TUR_arab_state_878_modifier]"
  TUR_arab_state_553_modifier_yes: "\n§Y[553.GetName]§!: [TUR_arab_state_553_modifier_autonomy_lebanon][TUR_arab_state_553_modifier_autonomy]"
- TUR_arab_state_758_modifier_yes: "\n§Y[679.GetName]§!: [TUR_arab_state_679_modifier_autonomy]"
- TUR_arab_state_760_modifier_yes: "\n§Y[878.GetName]§!: [TUR_arab_state_878_modifier_autonomy]"
+ TUR_arab_state_679_modifier_yes: "\n§Y[679.GetName]§!: [TUR_arab_state_679_modifier_autonomy]"
+ TUR_arab_state_878_modifier_yes: "\n§Y[878.GetName]§!: [TUR_arab_state_878_modifier_autonomy]"
 
  TUR_arab_population_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_arab_population_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_arab_population_war_support_factor|=2%+]"
  TUR_arab_state_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_arab_state_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_arab_state_war_support_factor|=2%+]"
@@ -3937,6 +3943,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_arab_state_996_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_996_state_war_support_factor|=0%+]"
  TUR_jewish_millet_text_tt:0 "[TUR_jewish_millet_text_tt]"
  TUR_jewish_millet_modifiers_tt:0 "§YJewish Millet Modifiers§!\nIncompatible Religion: §R-0.50%§!\nIncompatible Culture: §R-0.50%§!\n\n"
+ TUR_jewish_state_specific_modifiers_tt:0 "§YJewish State Modifiers§!\n\n[TUR_jewish_state_specific_modifiers]"
  TUR_jewish_population_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_jewish_population_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_jewish_population_war_support_factor|=2%+]"
  TUR_jewish_state_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_jewish_state_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_jewish_state_war_support_factor|=2%+]"
  TUR_jewish_millet_text_desc_tt:0 "[TUR_jewish_millet_text_desc_tt]"
@@ -4434,7 +4441,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_kurdish_population_specific_modifiers_yes:0 "§YPopulation Specific Modifiers§![TUR_kurdish_population_421_modifier][TUR_kurdish_population_881_modifier]"
  TUR_kurdish_population_421_modifier_yes: "\n§Y[421.GetName]§!: [TUR_kurdish_population_421_modifier_1]"
  TUR_kurdish_population_881_modifier_yes: "\n§Y[881.GetName]§!: [TUR_kurdish_population_881_modifier_1]"
- TUR_kurdish_state_specific_modifiers_tt:0 "§Ykurdish State Modifiers§!\n\n[TUR_kurdish_state_specific_modifiers]"
+ TUR_kurdish_state_specific_modifiers_tt:0 "§YKurdish State Modifiers§!\n\n[TUR_kurdish_state_specific_modifiers]"
  TUR_kurdish_state_specific_modifiers_yes:0 "§YState Specific Modifiers§![TUR_kurdish_state_350_modifier][TUR_kurdish_state_352_modifier][TUR_kurdish_state_806_modifier][TUR_kurdish_state_881_modifier]"
  TUR_kurdish_state_350_modifier_yes: "\n§Y[350.GetName]§!: [TUR_kurdish_state_350_modifier_semi_autonomy]"
  TUR_kurdish_state_352_modifier_yes: "\n§Y[352.GetName]§!: [TUR_kurdish_state_352_modifier_autonomy]"
@@ -4551,6 +4558,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_kurdish_state_884_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_884_state_war_support_factor|=0%+]"
  TUR_assyrian_millet_text_tt:0 "[TUR_assyrian_millet_text_tt]"
  TUR_assyrian_millet_modifiers_tt:0 "§YAssyrian Millet Modifiers§!\nIncompatible Religion: §R-0.50%§!\nIncompatible Culture: §R-0.50%§!\n\n"
+ TUR_assyrian_state_specific_modifiers_tt:0 "§YAssyrian State Modifiers§!\n\n[TUR_assyrian_state_specific_modifiers]"
  TUR_assyrian_population_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_assyrian_population_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_assyrian_population_war_support_factor|=2%+]"
  TUR_assyrian_state_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_assyrian_state_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_assyrian_state_war_support_factor|=2%+]"
  TUR_assyrian_millet_text_desc_tt:0 "[TUR_assyrian_millet_text_desc_tt]"
@@ -4597,6 +4605,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_assyrian_state_884_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_884_state_war_support_factor|=0%+]"
  TUR_georgian_millet_text_tt:0 "[TUR_georgian_millet_text_tt]"
  TUR_georgian_millet_modifiers_tt:0 "§YGeorgian Millet Modifiers§!\nIncompatible Religion: §R-0.50%§!\nIncompatible Culture: §R-0.50%§!\n\n"
+ TUR_georgian_state_specific_modifiers_tt:0 "§YGeorgian State Modifiers§!\n\n[TUR_georgian_state_specific_modifiers]"
  TUR_georgian_population_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_georgian_population_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_georgian_population_war_support_factor|=2%+]"
  TUR_georgian_state_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_georgian_state_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_georgian_state_war_support_factor|=2%+]"
  TUR_georgian_millet_text_desc_tt:0 "[TUR_georgian_millet_text_desc_tt]"
@@ -4643,6 +4652,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_georgian_state_855_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_855_state_war_support_factor|=0%+]"
  TUR_romanian_millet_text_tt:0 "[TUR_romanian_millet_text_tt]"
  TUR_romanian_millet_modifiers_tt:0 "§YRomanian Millet Modifiers§!\nIncompatible Religion: §R-0.50%§!\nIncompatible Culture: §R-0.50%§!\n\n"
+ TUR_romanian_state_specific_modifiers_tt:0 "§YRomanian State Modifiers§!\n\n[TUR_romanian_state_specific_modifiers]"
  TUR_romanian_population_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_romanian_population_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_romanian_population_war_support_factor|=2%+]"
  TUR_romanian_state_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_romanian_state_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_romanian_state_war_support_factor|=2%+]"
  TUR_romanian_millet_text_desc_tt:0 "[TUR_romanian_millet_text_desc_tt]"
@@ -4785,6 +4795,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_romanian_state_1007_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1007_state_war_support_factor|=0%+]"
  TUR_turkish_millet_text_tt:0 "[TUR_turkish_millet_text_tt]"
  TUR_turkish_millet_modifiers_tt:0 "§YTurkish Millet Modifiers§!\nIncompatible Culture: §R-0.50%§!\n\n"
+ TUR_turkish_state_specific_modifiers_tt:0 "§YTurkish State Modifiers§!\n\n[TUR_turkish_state_specific_modifiers]"
  TUR_turkish_population_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_turkish_population_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_turkish_population_war_support_factor|=2%+]"
  TUR_turkish_state_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_turkish_state_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_turkish_state_war_support_factor|=2%+]"
  TUR_turkish_millet_text_desc_tt:0 "[TUR_turkish_millet_text_desc_tt]"
@@ -5271,6 +5282,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_turkish_state_1019_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1019_state_war_support_factor|=0%+]"
  TUR_azerbaijani_millet_text_tt:0 "[TUR_azerbaijani_millet_text_tt]"
  TUR_azerbaijani_millet_modifiers_tt:0 "§Yazerbaijani Millet Modifiers§!\nIncompatible Culture: §R-0.50%§!\n\n"
+ TUR_azerbaijani_state_specific_modifiers_tt:0 "§YAzerbaijani State Modifiers§!\n\n[TUR_azerbaijani_state_specific_modifiers]"
  TUR_azerbaijani_population_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_azerbaijani_population_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_azerbaijani_population_war_support_factor|=2%+]"
  TUR_azerbaijani_state_text_tt:0 "Modifies §Y[TUR_separatist_sentiments_tt]§! by\n£stability_texticon  Stability: [?ROOT.TUR_azerbaijani_state_stability_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_azerbaijani_state_war_support_factor|=2%+]"
  TUR_azerbaijani_millet_text_desc_tt:0 "[TUR_azerbaijani_millet_text_desc_tt]"
