last bug for minorities fixed

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5353,7 +5353,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_azerbaijani_state_939_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_939_state_war_support_factor|=0%+]"
  TUR_accepted_religion_20_yes:0 "\nAccepted Religion: §G+0.20%§!"
  TUR_accepted_religion_30_yes:0 "\nAccepted Religion: §G+0.30%§!"
- TUR_accepted_religion_decrease_20_yes:0 "\nAccepted Religion: §R-0.20%§!"
+ TUR_accepted_religion_decrease_10_yes:0 "\nIncompatible Religion: §R-0.10%§!"
+ TUR_accepted_religion_decrease_20_yes:0 "\nIncompatible Religion: §R-0.20%§!"
+ TUR_accepted_religion_decrease_40_yes:0 "\nIncompatible Religion: §R-0.40%§!"
  TUR_state_modifier_autonomy_lebanon_yes:0 "\nHas Modifier: §YAutonomous Mutasarrifate§!: §G+2.00%§!"
  TUR_state_modifier_autonomy_yes:0 "\nHas Modifier: §YAutonomous Vilayet§!: §G+1.00%§!"
  TUR_state_modifier_semi_autonomy_yes:0 "\nHas Modifier: §YSemi-Autonomous Vilayet§!: §G+0.50%§!"
