--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10830,3 +10830,7 @@ POR_pillar_of_democracy_desc:0 ""
 # Tooltips
 
 unlocks_national_focus_tt: "§YNational Focus§! becomes §GAvailable§!:"
+
+#bulgaria
+liberal_stabilizer:0 "Liberal Stabilizer"
+nationalist_unifier_and_banker:0 "Nationalist Unifier and Banker"
